assets/base.css
/* ... */
.header__active-menu-item {
  transition: text-decoration-thickness var(--duration-short) ease;
  color: rgb(var(--color-foreground));
  text-decoration: underline;
  text-underline-offset: 0.3rem;
}

.header__menu-item:hover .header__active-menu-item {
  text-decoration-thickness: 0.2rem;
}

.header__submenu {
  transition: opacity var(--duration-default) ease,
    transform var(--duration-default) ease;
}

.header__submenu.list-menu {
  padding: 2rem 0;
}

.header__submenu .header__submenu {
  background-color: rgba(var(--color-foreground), 0.03);
  padding: 0.5rem 0;
  margin: 0.5rem 0;
}

.header__submenu .header__menu-item:after {
  right: 2rem;
}

.header__submenu .header__menu-item {
  padding: 0.95rem 3.5rem 0.95rem 2rem;
}

.header__submenu .header__submenu .header__menu-item {
  padding-left: 3rem;
}

.header__menu-item .icon-caret {
  right: 0.8rem;
}

.header__submenu .icon-caret {
  right: 2rem;
}

details-disclosure > details {
  position: relative;
}

@keyframes animateMenuOpen {
  0% {
    opacity: 0;
    transform: translateY(-1.5rem);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.overflow-hidden-mobile,
.overflow-hidden-tablet {
  overflow: hidden;
}

@media screen and (min-width: 750px) {
  .overflow-hidden-mobile {
    overflow: auto;
  }
}

@media screen and (min-width: 990px) {
  .overflow-hidden-tablet {
    overflow: auto;
  }
}

.badge {
  border: 1px solid transparent;
  border-radius: 4rem;
  display: inline-block;
  font-size: 1.2rem;
  letter-spacing: 0.1rem;
  line-height: 1;
  padding: 0.6rem 1.3rem;
  text-align: center;
  background-color: rgb(var(--color-badge-background));
  border-color: rgba(var(--color-badge-border), var(--alpha-badge-border));
  color: rgb(var(--color-foreground));
  word-break: break-word;
}

.gradient {
  background: var(--color-background);
  background: var(--gradient-background);
  background-attachment: fixed;
}

@media screen and (forced-colors: active) {
  .icon {
    color: CanvasText;
    fill: CanvasText !important;
  }

  .icon-close-small path {
    stroke: CanvasText;
  }
}

.site-logo {
  text-align: center;
  margin-top: 3rem;
  margin-bottom: 0;
}

.site-logo a {
  display: block;
  text-decoration: none;
  color: currentColor;
  font-size: 4rem;
}

.site-logo img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.site-logo__primary {
  width: 75%;
}

.site-logo__secondary {
  width: 37.5%;
  margin-top: 1rem;
}

.nav-buttons {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  margin-bottom: 4rem;
}

.nav-buttons .btn {
  display: flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  color: rgb(var(--color-foreground));
  font-weight: bold;
  border: 4px solid;
  border-radius: 2rem;
  width: 100%;
  text-align: center;
  margin-top: 2rem;
  font-size: 3rem;
  padding: 2rem 1rem;
}

.nav-buttons .btn--filled {
  background: rgb(var(--color-foreground));
  border-color: rgb(var(--color-foreground));
  color: rgb(var(--color-background));
  box-shadow: 0 0 0 4px inset rgb(var(--color-background));;
}

.nav-buttons .btn img {
  display: block;
}

.nav-buttons .year {
  order: 1;
  margin-top: 3rem;
  height: 3rem;
}

.header__icon__shopping-cart {
  width: auto;
  height: 3rem;
}

.title-wrapper-with-link--no-heading,
.title--no-heading {
  display: none;
}

@media screen and (min-width: 990px) {
  .nav-buttons {
    flex-direction: row;
  }

  .nav-buttons .btn {
    width: 25%;
    margin-top: 0;
    font-size: 4rem;
  }

  .site-logo a {
    font-size: 7rem;
  }
  
  .nav-buttons .year {
    order: unset;
    margin-top: unset;
    height: 5rem;
  }
}

